@@ -1,8 +1,10 @@
 package kr.mj.gollaba.config;
 
+import com.fasterxml.classmate.TypeResolver;
 import io.swagger.v3.oas.models.OpenAPI;
 import io.swagger.v3.oas.models.servers.Server;
 import kr.mj.gollaba.common.Const;
+import kr.mj.gollaba.common.ErrorAPIResponse;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.bind.annotation.RestController;
@@ -21,6 +23,9 @@ import springfox.documentation.spring.web.plugins.Docket;
 import javax.servlet.http.HttpServletRequest;
 import java.util.*;
 
+import static kr.mj.gollaba.config.SecurityConfig.REFRESH_TOKEN_HEADER;
+import static org.springframework.http.HttpHeaders.AUTHORIZATION;
+
 @Configuration
 public class SwaggerConfig implements WebMvcOpenApiTransformationFilter {
 	
@@ -28,11 +33,14 @@ public class SwaggerConfig implements WebMvcOpenApiTransformationFilter {
     private String title;
 
 	@Bean
-	public Docket apiV1() {
+	public Docket apiV1(TypeResolver typeResolver) {
 		version = "v1";
-		title = "Free-Polling API";
+		title = "Gollaba API";
 
 		return new Docket(DocumentationType.OAS_30)
+				.additionalModels(
+						typeResolver.resolve(ErrorAPIResponse.class)
+				)
 				.consumes(getConsumeContentTypes())
 				.produces(getProduceContentTypes())
 				.useDefaultResponseMessages(false)
@@ -42,8 +50,8 @@ public class SwaggerConfig implements WebMvcOpenApiTransformationFilter {
 				.paths(PathSelectors.ant(Const.ROOT_URL + "/**"))
 				.build()
 				.apiInfo(apiInfo(title, version))
-				.securityContexts(Arrays.asList(securityContext()))
-				.securitySchemes(Arrays.asList(apiKey()));
+				.securityContexts(List.of(securityContext()))
+				.securitySchemes(List.of(accessToken(), refreshToken()));
 	}
 
 	@Override
@@ -57,11 +65,11 @@ public class SwaggerConfig implements WebMvcOpenApiTransformationFilter {
 
 		Server devServer = new Server();
 		devServer.setDescription("dev");
-		devServer.setUrl("https://dev.free.polling.com");
+		devServer.setUrl("https://dev.api.gollaba.net");
 
 		Server prodServer = new Server();
 		prodServer.setDescription("prod");
-		prodServer.setUrl("https://free.polling.com");
+		prodServer.setUrl("https://api.gollaba.net");
 
 		openApi.setServers(List.of(localServer, devServer, prodServer));
 
@@ -76,7 +84,7 @@ public class SwaggerConfig implements WebMvcOpenApiTransformationFilter {
 	private ApiInfo apiInfo(String title, String version) {
         return new ApiInfo(
 				title,
-				"Free-Polling API Docs",
+				title + " Docs",
 				version,
 				null,
 				null,
@@ -84,21 +92,26 @@ public class SwaggerConfig implements WebMvcOpenApiTransformationFilter {
 				null,
 				new ArrayList<>());
     }
-    
-	private ApiKey apiKey() {
-		return new ApiKey("JWT", "Authorization", "header");
+
+	private ApiKey accessToken() {
+		return new ApiKey(AUTHORIZATION, AUTHORIZATION, "header");
+	}
+
+	private ApiKey refreshToken() {
+		return new ApiKey(REFRESH_TOKEN_HEADER, REFRESH_TOKEN_HEADER,"header");
 	}
 
 	private SecurityContext securityContext() {
-		return SecurityContext.builder().securityReferences(defaultAuth())
-				.forPaths(PathSelectors.any()).build();
+		return SecurityContext.builder()
+				.securityReferences(defaultAuth())
+				.build();
 	}
 
 	List<SecurityReference> defaultAuth() {
 		AuthorizationScope authorizationScope = new AuthorizationScope("global", "accessEverything");
 		AuthorizationScope[] authorizationScopes = new AuthorizationScope[1];
 		authorizationScopes[0] = authorizationScope;
-		return Arrays.asList(new SecurityReference("JWT", authorizationScopes));
+		return Arrays.asList(new SecurityReference(AUTHORIZATION, authorizationScopes), new SecurityReference(REFRESH_TOKEN_HEADER, authorizationScopes));
 	}
 	
 	private Set<String> getConsumeContentTypes() {
